// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1: Тестирование компонента Button (проверяем при помощи снэпшотов корректную отрисовку) 1.1: кнопки с текстом 1`] = `
<DocumentFragment>
  <button
    class="text text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    >
      123
    </p>
  </button>
</DocumentFragment>
`;

exports[`1: Тестирование компонента Button (проверяем при помощи снэпшотов корректную отрисовку) 1.2: кнопки без текста 1`] = `
<DocumentFragment>
  <button
    class="text text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</DocumentFragment>
`;

exports[`1: Тестирование компонента Button (проверяем при помощи снэпшотов корректную отрисовку) 1.3: заблокированной кнопки 1`] = `
<DocumentFragment>
  <button
    class="text text_type_button text_color_primary button undefined false "
    disabled=""
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</DocumentFragment>
`;

exports[`1: Тестирование компонента Button (проверяем при помощи снэпшотов корректную отрисовку) 1.4: кнопки с индикацией загрузки 1`] = `
<DocumentFragment>
  <button
    class="text text_type_button text_color_primary button undefined loader "
    disabled=""
    type="button"
  >
    <img
      alt="Загрузка."
      class="loader_icon"
      src="loader.svg"
    />
  </button>
</DocumentFragment>
`;

exports[`1: Тестирование компонента Button (проверяем при помощи снэпшотов корректную отрисовку) 1.5: Проверяем корректность вызова колбека при клике на кнопку 1`] = `
<div>
  <button
    class="text text_type_button text_color_primary button undefined false "
    data-testid="btn"
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
  <p
    data-testid="result"
    id="result"
  >
    GOOD
  </p>
</div>
`;
